// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LsaFormService init should init the form with defaults 1`] = `
Object {
  "lubricationInterval": "year",
  "lubricationPoints": null,
  "lubricationQty": 60,
  "optime": 1,
  "pipeLength": null,
}
`;

exports[`LsaFormService init should init the form with defaults 2`] = `
Object {
  "grease": Object {
    "id": "ARCANOL_MULTI2",
    "title": "Arcanol MULTI2",
  },
  "lubricantType": "Arcanol",
}
`;

exports[`LsaFormService init should init the form with defaults 3`] = `
Object {
  "battery": 2,
  "temperature": Object {
    "max": 15,
    "min": 5,
    "title": "",
  },
}
`;

exports[`LsaFormService init should init the form with defaults 4`] = `
Object {
  "application": Object {
    "battery": 2,
    "temperature": Object {
      "max": 15,
      "min": 5,
      "title": "",
    },
  },
  "lubricant": Object {
    "grease": Object {
      "id": "ARCANOL_MULTI2",
      "title": "Arcanol MULTI2",
    },
    "lubricantType": "Arcanol",
  },
  "lubricationPoints": Object {
    "lubricationInterval": "year",
    "lubricationPoints": null,
    "lubricationQty": 60,
    "optime": 1,
    "pipeLength": null,
  },
}
`;
